# server

./: .dockerignore  .gitignore  ChangeLog.md  Dockerfile  README.md  apache-example.conf  docker-compose.yml  etebase-server.ini.example  etesync-server.ini  etesync-server.ini.example  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: lint.yml
django_etebase/: __init__.py  app_settings.py  app_settings_inner.py  apps.py  exceptions.py  models.py  parsers.py  permissions.py  renderers.py  serializers.py  signals.py  urls.py  utils.py  views.py
django_etebase/drf_msgpack/: apps.py  parsers.py  renderers.py
django_etebase/migrations/: 0001_initial.py  0002_userinfo.py  0003_collectioninvitation.py  0004_collectioninvitation_version.py  0005_auto_20200526_1021.py  (+29 more)
django_etesync/: __init__.py  app_settings.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  views.py
docker/: build.sh
etebase_fastapi/: app.py  authentication.py  collection.py  dependencies.py  exceptions.py  execptions.py  invitation.py  main.py  member.py  middleware.py  msgpack.py  redis.py  stoken_handler.py  test_reset_view.py  utils.py
etebase_server/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
etesync_server/: __init__.py  settings.py  urls.py  utils.py  wsgi.py
example-config/: etesync.ini  my.server.name.conf  readme.md  uwsgi.service
myauth/: admin.py  apps.py  forms.py  models.py
requirements.in/: base.txt  development.txt
scripts/: lint.sh
templates/: success.html
(+171 files in other folders)
